<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@null"
        android:src="@drawable/add" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_text"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction_text"/>

        <RadioButton
            android:id="@+id/radio_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply_text"/>

        <RadioButton
            android:id="@+id/radio_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_text"/>
    </RadioGroup>

</LinearLayout>