<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mobile.fragmentsapplication.ui.calculator.CalculatorFragment"
        android:label="@string/title_home"
        tools:layout="@layout/calculator_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mobile.fragmentsapplication.ui.history.HistoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/history_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mobile.fragmentsapplication.ui.images.ImagesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_progress_bar"
        android:name="com.mobile.fragmentsapplication.ui.progress.ProgressBarFragment"
        android:label="Progress Bar"
        tools:layout="@layout/fragment_progress_bar" />
    <fragment
        android:id="@+id/navigation_checkbox"
        android:name="com.mobile.fragmentsapplication.ui.checkbox.CheckBoxFragment"
        android:label="fragment_check_box"
        tools:layout="@layout/fragment_check_box" />
</navigation>